--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,18 @@ services:
       AWS_ACCESS_KEY_ID: "${AWS_ACCESS_KEY_ID}"
       AWS_SECRET_ACCESS_KEY: "${AWS_SECRET_ACCESS_KEY}"
       HUGO_ENV: "${HUGO_ENV}"
+      HUGO_BASEURL: "${DOMAIN}"
+      HUGO_TITLE: "${SITE_TITLE}"
+      HUGO_LANGUAGE_CODE: "${SITE_LANGUAGE_CODE}"
+
+  aws:
+    image: amazon/aws-cli:2.1.30
+    volumes:
+      - ./app:/app
+    environment:
+      AWS_DEFAULT_REGION: "${AWS_DEFAULT_REGION}"
+      AWS_ACCESS_KEY_ID: "${AWS_ACCESS_KEY_ID}"
+      AWS_SECRET_ACCESS_KEY: "${AWS_SECRET_ACCESS_KEY}"
 
   terraform:
     build: ./terraform
@@ -18,3 +30,10 @@ services:
     environment:
       AWS_ACCESS_KEY_ID: "${AWS_ACCESS_KEY_ID}"
       AWS_SECRET_ACCESS_KEY: "${AWS_SECRET_ACCESS_KEY}"
+      TF_VAR_region: "${AWS_DEFAULT_REGION}"
+      TF_VAR_domain: "${DOMAIN}"
+
+  tfsec:
+    image: tfsec/tfsec:v0.39.20
+    volumes:
+      - ./terraform:/terraform
