Set baseurl differently to allow local preview

--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,8 @@
 
 SITE_TITLE=
 SITE_LANGUAGE_CODE=en-us
-DOMAIN=
+SITE_BASEURL=https://example.com
+DOMAIN=example.com
 HUGO_ENV=development
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
