--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       AWS_ACCESS_KEY_ID: "${AWS_ACCESS_KEY_ID}"
       AWS_SECRET_ACCESS_KEY: "${AWS_SECRET_ACCESS_KEY}"
       HUGO_ENV: "${HUGO_ENV}"
-      HUGO_BASEURL: "https://${DOMAIN}"
+      HUGO_BASEURL: "${SITE_BASEURL}"
       HUGO_TITLE: "${SITE_TITLE}"
       HUGO_LANGUAGE_CODE: "${SITE_LANGUAGE_CODE}"
 
