--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,7 +13,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Build site
-        run: docker-compose run hugo build
+        run: make build
 
       - name: Store site as an artifact
         uses: actions/upload-artifact@v2
@@ -21,3 +21,12 @@ jobs:
           name: Site
           if-no-files-found: error
           path: app/public/**/*
+
+      - name: Initialize terraform
+        if: ${{ secrets.AWS_ACCESS_KEY_ID != '' }}
+        run: make terraform-init
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
+          DOMAIN: ${{ secrets.DOMAIN }}
