--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,6 +8,14 @@ jobs:
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
+    env:
+      SITE_TITLE: ${{ secrets.SITE_TITLE }}
+      SITE_LANGUAGE_CODE: ${{ secrets.SITE_LANGUAGE_CODE }}
+      SITE_BASEURL: ${{ secrets.SITE_BASEURL }}
+      DOMAIN: ${{ secrets.DOMAIN }}
+      HUGO_ENV: ${{ secrets.HUGO_ENV }}
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -23,10 +31,7 @@ jobs:
           path: app/public/**/*
 
       - name: Initialize terraform
-        if: ${{ secrets.AWS_ACCESS_KEY_ID != '' }}
+        if: ${{ env.AWS_ACCESS_KEY_ID != '' }}
         run: make terraform-init
         env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
-          DOMAIN: ${{ secrets.DOMAIN }}
