--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,6 +20,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - uses: actions/cache@v2
+        with:
+          path: terraform/.terraform
+          key: v1-${{ hashFiles('terraform/.terraform.lock.hcl') }}
+
       - name: Build site
         run: make build
 
