--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,8 @@
 SITE_TITLE=
 SITE_LANGUAGE_CODE=en-us
 SITE_BASEURL=https://example.com
+SITE_USERNAME=
+SITE_PASSWORD=
 DOMAIN=example.com
 HUGO_ENV=development
 AWS_ACCESS_KEY_ID=
