--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,9 +27,12 @@ services:
     build: ./terraform
     volumes:
       - ./terraform:/terraform
+      - ./authenticator:/authenticator
     environment:
       AWS_ACCESS_KEY_ID: "${AWS_ACCESS_KEY_ID}"
       AWS_SECRET_ACCESS_KEY: "${AWS_SECRET_ACCESS_KEY}"
+      TF_VAR_site_username: "${SITE_USERNAME}"
+      TF_VAR_site_password: "${SITE_PASSWORD}"
       TF_VAR_region: "${AWS_DEFAULT_REGION}"
       TF_VAR_domain: "${DOMAIN}"
 
