Implement passwordless authentication.
This uses signed JWTs to verify the identity of an email address.

--- a/.env.example
+++ b/.env.example
@@ -7,11 +7,11 @@
 
 SITE_TITLE=
 SITE_LANGUAGE_CODE=en-us
-SITE_BASEURL=https://example.com
-SITE_USERNAME=
-SITE_PASSWORD=
 DOMAIN=example.com
 HUGO_ENV=development
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_DEFAULT_REGION=us-east-1
+COOKIE_ENCRYPTION_SECRET=
+JWT_ENCRYPTION_SECRET=
+SUPPORT_EMAIL=youremail@example.com
