--- a/auth/package.json
+++ b/auth/package.json
@@ -17,6 +17,7 @@
     "babel-loader": "^8.2.2",
     "deindent": "^0.1.0",
     "dotenv": "^9.0.2",
+    "hapi-pino": "^8.3.0",
     "jest": "^26.6.3",
     "jsonwebtoken": "^8.5.1",
     "nodemon-webpack-plugin": "^4.5.2",
